# optitrack_ros_interface

./: .gitignore  README.md
ros2_ws/docker/: Dockerfile  README.md  build_docker.sh  start_docker.sh
ros2_ws/log/: latest_build
ros2_ws/src/optitrack_ros2_interface/: CMakeLists.txt  package.xml
ros2_ws/src/optitrack_ros2_interface/install/optitrack_ros2_interface/lib/optitrack_ros2_interface/: optitrack_transform_publisher_ros2
ros2_ws/src/optitrack_ros2_interface/install/optitrack_ros2_interface/share/ament_index/resource_index/parent_prefix_path/: optitrack_ros2_interface
ros2_ws/src/optitrack_ros2_interface/install/optitrack_ros2_interface/share/optitrack_ros2_interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/src/optitrack_ros2_interface/install/optitrack_ros2_interface/share/optitrack_ros2_interface/cmake/: optitrack_ros2_interfaceConfig.cmake
ros2_ws/src/optitrack_ros2_interface/install/optitrack_ros2_interface/share/optitrack_ros2_interface/launch/: optitrack_with_transform_to_base.py
ros2_ws/src/optitrack_ros2_interface/launch/: optitrack_with_transform_to_base.py
ros2_ws/src/optitrack_ros2_interface/log/: latest_build
ros2_ws/src/optitrack_ros2_interface/src/: optitrack_transform_publisher_ros2.cpp
ros_ws/docker/: Dockerfile  build_docker.sh  start_optitrack.sh
ros_ws/src/optitrack_ros_interface/: CMakeLists.txt  package.xml
ros_ws/src/optitrack_ros_interface/launch/: optitrack_with_transform_to_base.launch
ros_ws/src/optitrack_ros_interface/src/: optitrack_transform_publisher.cpp
